README change and .gitignore added
Added .gitignore at the root folder of the project.
Corrected a typo in README and added authors.

Signed-off-by: Raffaele Aquilone <aquiloneraf@gmail.com>

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This peoject aims at implementing effectively Quad-Trees data structure using C++ programming language.
+This project aims at implementing effectively Quad-Trees data structure using C++ programming language.
+
+Authors: Hailpam, BenKenobi
