--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 This project aims at implementing effectively Quad-Trees data structure using C++ programming language.
 
-Authors: Hailpam, BenKenobi
+Authors: Paolo Maresca (alias  hailpam) and Raffaele Aquilone (alias BenKenobi)
