--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This project aims at implementing effectively Quad-Trees data structure using C++ programming language.
+This project aims at providing a C++ implementation of the Quadtree data structure, https://en.wikipedia.org/wiki/Quadtree.
 
 Authors: Paolo Maresca (alias  hailpam) and Raffaele Aquilone (alias BenKenobi)
